--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -2,7 +2,7 @@
 <html lang="<%- page.language %>" prefix="og: http://ogp.me/ns# video: http://ogp.me/ns/video# ya: http://webmaster.yandex.ru/vocabularies/">
 <head>
 
-    <% include includes/head.ejs %>
+    <%- include('includes/head.ejs'); -%>
 
 </head>
 <body>
@@ -11,7 +11,7 @@
 
 <div class="wrapper">
 
-    <% include includes/header.ejs %>
+    <%- include('includes/header.ejs'); -%>
 
     <div class="contener">
 
@@ -100,7 +100,7 @@
                                 <% if (movie.actors_url) { %>
                                     <strong><%- page.l.actors %>:</strong> <%- movie.actors_url %><br>
                                 <% } %>
-                                    <br>
+                                <br>
                                 <% if (movie.tags_url) { %>
                                     <strong><%- page.l.tags %>:</strong> <%- movie.tags_url %><br>
                                 <% } %>
@@ -190,15 +190,15 @@
                         <div class="randomMovieRelated">
                             <div class="cinemapress-random-related"
                                  onclick="window.location.href='<%- (category.url && category.url.indexOf('?')+1 ? category.url + '&random' : category.url + '?random') %>'"
-                                 title="<%- page.l.random %>">
-                                <img src="/themes/<%- page.theme %>/public/images/dice.svg" alt="<%- page.l.random %>">
+                                 title="<%= page.l.random %>">
+                                <img src="/themes/<%- page.theme %>/public/images/dice.svg" alt="<%= page.l.random %>">
                             </div>
                         </div>
                     </div>
                     <div class="relatednews">
                         <ul class="ul_related">
                             <% if (category.movies.length) {
-                            category.movies.splice(5, category.movies.length % 5);
+                                category.movies.splice(5, category.movies.length % 5);
                             category.movies.forEach(function (movie) { %>
                                 <li>
                                     <a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)">
@@ -217,6 +217,144 @@
                     <div style="padding: 10px;">
                         <%- page.comments %>
                     </div>
+                <% } else { %>
+                    <div style="padding: 10px;">
+                        <div id="cinemapress-comments">
+                            <h3 class="cinemapress-comment-h3">
+                                <%- page.l.comments %>
+                                <span class="cinemapress-comment-count cinemapress-comment-bg-color"><%- comments && comments.count || '0' %></span>
+                            </h3>
+                            <% if (typeof comments === 'object' && typeof comments.config === 'object') { %>
+                                <% if (comments.config.star_rating) { %>
+                                    <div class="cinemapress-comment-star">
+                                        <div class="cinemapress-comment-star-down" data-comment-star="1"></div>
+                                        <div class="cinemapress-comment-star-award" data-comment-star="3"></div>
+                                        <div class="cinemapress-comment-star-up" data-comment-star="2"></div>
+                                    </div>
+                                <% } %>
+                                <div class="cinemapress-comment-form">
+                                    <% if (comments.config.bb_codes) { %>
+                                        <div class="cinemapress-comment-form-bb">
+                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-b" data-bb-code="b"><%- page.l.bold.toLowerCase() %></span>
+                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-i" data-bb-code="i"><%- page.l.italic.toLowerCase() %></span>
+                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-spoiler" data-bb-code="spoiler">👻 <%- page.l.spoiler.toLowerCase() %></span>
+                                            <span class="cinemapress-comment-bg cinemapress-comment-form-bb-search" data-bb-code="search">🔍 <%- page.l.search.toLowerCase() %></span>
+                                            <input class="cinemapress-comment-bg cinemapress-comment-form-anonymous" name="comment_anonymous" type="text" placeholder="<%- page.l.username %>">
+                                        </div>
+                                    <% } %>
+                                    <div>
+                                        <div class="cinemapress-comment-textarea-div">
+                                            <textarea name="comment_text" class="cinemapress-comment-bg cinemapress-comment-textarea" placeholder="<%- page.l.comment %>" autocomplete="off" autocapitalize="off" spellcheck="false"></textarea>
+                                            <div class="cinemapress-comment-form-bg"></div>
+                                            <div class="cinemapress-comment-button-bg hover-off" data-comment-type="submit">
+                                                <span class="cinemapress-comment-button-text"></span>
+                                            </div>
+                                        </div>
+                                        <% if (comments.config.question) { %>
+                                            <div class="cinemapress-comment-bg cinemapress-comment-question" style="display: none">
+                                                <div class="cinemapress-comment-question-text"><%- comments.config.question %></div>
+                                                <div class="cinemapress-comment-question-answer">
+                                                    <% if (comments.config.question_yes) { %>
+                                                        <span class="cinemapress-comment-question-answer-yes"><%- page.l.yes %></span>
+                                                    <% } %>
+                                                    <% if (comments.config.question_not) { %>
+                                                        <span class="cinemapress-comment-question-answer-not"><%- page.l.not %></span>
+                                                    <% } %>
+                                                </div>
+                                                <% if (comments.config.question_yes) { %>
+                                                    <div class="cinemapress-comment-question-text-yes" style="display: none">
+                                                        <%- comments.config.question_yes %>
+                                                    </div>
+                                                <% } %>
+                                                <% if (comments.config.question_not) { %>
+                                                    <div class="cinemapress-comment-question-text-not" style="display: none">
+                                                        <%- comments.config.question_not %>
+                                                    </div>
+                                                <% } %>
+                                                <div class="cinemapress-comment-question-bg"></div>
+                                                <% if (comments.config.question_poster) { %>
+                                                    <div class="cinemapress-comment-question-bg-poster" style="background-image:url('<%- comments.config.question_poster %>')"></div>
+                                                <% } %>
+                                            </div>
+                                        <% } %>
+                                    </div>
+                                    <div style="font-size:8px;text-align:right;opacity:.2">This site is protected by reCAPTCHA and the Google <a href="https://policies.google.com/privacy" style="font-size:8px" target="_blank">Privacy Policy</a> and <a href="https://policies.google.com/terms" style="font-size:8px" target="_blank">Terms of Service</a> apply.</div>
+                                </div>
+                                <%- comments.indexer ? comments.indexer : '' %>
+                                <% if (comments.list && comments.list.length) { %>
+                                    <% comments.list.forEach(function (comment) { %>
+                                        <div class="cinemapress-comment" id="c<%- comment.id %>">
+                                            <div class="cinemapress-comment-head">
+                                                <div class="cinemapress-comment-head-avatar">
+                                                    <img src="<%- comment.avatar %>" alt="<%= comment.user %>">
+                                                </div>
+                                                <% if (comments.config.star_rating) { %>
+                                                    <% if (comment.star === 1) { %>
+                                                        <div class="cinemapress-comment-head-star">
+                                                            <div class="cinemapress-comment-star-down"></div>
+                                                        </div>
+                                                    <% } else if (comment.star === 2) { %>
+                                                        <div class="cinemapress-comment-head-star">
+                                                            <div class="cinemapress-comment-star-up"></div>
+                                                        </div>
+                                                    <% } else if (comment.star === 3) { %>
+                                                        <div class="cinemapress-comment-head-star">
+                                                            <div class="cinemapress-comment-star-award"></div>
+                                                        </div>
+                                                    <% } %>
+                                                <% } %>
+                                                <div class="cinemapress-comment-head-meta">
+                                                    <div class="cinemapress-comment-head-meta-vote">
+                                                        <span class="cinemapress-comment-like" data-comment-type="like" data-comment-id="<%- comment.id %>" title="<%= page.l.like %>">
+                                                            <span class="cinemapress-comment-like-icon"></span>
+                                                            <span class="cinemapress-comment-like-number"><%- comment.like %></span>
+                                                        </span>
+                                                        <span class="cinemapress-comment-dislike" data-comment-type="dislike" data-comment-id="<%- comment.id %>" title="<%= page.l.dislike %>">
+                                                            <span class="cinemapress-comment-dislike-number"><%- comment.dislike %></span>
+                                                            <span class="cinemapress-comment-dislike-icon"></span>
+                                                        </span>
+                                                        <span class="cinemapress-comment-reply" data-reply-id="<%- comment.id %>" data-bb-code="b" data-bb-value="<%- comment.user %>" title="<%= page.l.reply %>">
+                                                            <span class="cinemapress-comment-reply-icon"></span>
+                                                        </span>
+                                                    </div>
+                                                    <div class="cinemapress-comment-user" data-comment-id="<%- comment.id %>">
+                                                        <div class="cinemapress-comment-user-name">
+                                                            <%- comment.user %>
+                                                        </div><div class="cinemapress-comment-user-said">
+                                                            <%- page.l.said %>
+                                                        </div><div class="cinemapress-comment-user-date">
+                                                            <%- comment.date %>
+                                                        </div><div class="cinemapress-comment-user-link">
+                                                            <a href="<%- comment.url %>#c<%- comment.id %>">#</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="cinemapress-comment-bg cinemapress-comment-radius">
+                                                <%- comment.comment %>
+                                            </div>
+                                            <% if (comment.admin) { %>
+                                                <div class="cinemapress-comment-admin">
+                                                    <div class="cinemapress-comment-bg cinemapress-comment-admin-text">
+                                                        <%- comment.admin %>
+                                                    </div>
+                                                    <div class="cinemapress-comment-admin-bg"></div>
+                                                </div>
+                                            <% } %>
+                                        </div>
+                                    <% }); %>
+                                <% } %>
+                            <% } %>
+                            <div class="cinemapress-comment-arrow">
+                                <% if (comments && comments.prev) { %>
+                                    <div class="cinemapress-prev-comments" onclick="window.location.href='?page=<%- comments.prev %>#cinemapress-comments'"></div>
+                                <% } %>
+                                <% if (comments && comments.next) { %>
+                                    <div class="cinemapress-next-comments" onclick="window.location.href='?page=<%- comments.next %>#cinemapress-comments'"></div>
+                                <% } %>
+                            </div>
+                        </div>
+                    </div>
                 <% } %>
 
                 <% if (typeof page.adv === 'object' && page.adv.bottom) { %>
@@ -227,13 +365,13 @@
 
             </div>
 
-            <% include includes/left.ejs %>
+            <%- include('includes/left.ejs'); -%>
 
         </div>
 
     </div>
 
-    <% include includes/footer.ejs %>
+    <%- include('includes/footer.ejs'); -%>
 
 </div>
 
