--- a/views/trailer.ejs
+++ b/views/trailer.ejs
@@ -209,7 +209,7 @@
                         <i><span class="selection_index"></span><%- category.name %></i>
                         <div class="randomMovieRelated">
                             <div class="cinemapress-random-related"
-                                 onclick="window.location.href='<%- (category.url && category.url.indexOf('?')+1 ? category.url + '&random' : category.url + '?random') %>'"
+                                 onclick="window.location.href='<%- (category.url && category.url.indexOf('?')+1 ? category.url + '&random=' : category.url + '?random=') %><%- Math.random() %>'"
                                  title="<%= page.l.random %>">
                                 <img src="/themes/<%- page.theme %>/public/images/dice.svg" alt="<%= page.l.random %>">
                             </div>
