--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -11,7 +11,7 @@
         <div class="randomMovieMenu">
             <div class="user_panel">
                 <div class="loginin cinemapress-random-menu">
-                    <a href="/?random" title="<%= page.l.lucky %>"><%- page.l.lucky %></a>
+                    <a href="/?random=<%- Math.random() %>" title="<%= page.l.lucky %>"><%- page.l.lucky %></a>
                 </div>
             </div>
         </div>
